examples/panic/panic.out
# At the command line, navigate to the directory that contains the 
# `.bal` file and run the `ballerina run` command. 
$ ballerina run panic.bal
Record ID: 1, value: record1
error: Record is nil {}
	at main(panic.bal:26)
	   readRecord(panic.bal:14)
